# olx-buddy

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  plan.md
.github/workflows/: ci.yml
backend/: coverage.json  entrypoint.dev.sh  entrypoint.ollama.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9ad9e4f60fe7_add_job_execution_table.py  ef6f70222315_initial_schema_with_listings_and_.py
backend/app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routers/: analytics.py  generate.py  listings.py  scheduler.py
backend/app/services/: ai.py  analytics.py  scraper.py  storage.py
backend/tests/: __init__.py  test_ai.py  test_analytics.py  test_crud.py  test_generate.py  test_main.py  test_scheduler_api.py  test_scheduler_jobs.py  test_scraper.py  test_storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.ts  App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/views/: AddListing.vue  Analytics.test.ts  Analytics.vue  Dashboard.vue  DescriptionGenerator.vue  ListingDetail.test.ts  ListingDetail.vue  Scheduler.test.ts  Scheduler.vue
