[project]
name = "olx-buddy"
version = "0.1.0"
description = "Vinted/OLX sales management webapp"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.21",
    "sqlalchemy==2.0.45",
    "alembic==1.17.2",
    "psycopg2-binary==2.9.11",
    "httpx==0.26.0",
    "apscheduler==3.11.2",
    "python-dotenv==1.2.1",
    "openai==2.14.0",
    "pillow==10.2.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==7.0.0",
    "pytest-asyncio==0.23.3",
    "ruff==0.14.11",
    "pyrefly==0.47.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyrefly]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
