[project]
name = "olx-buddy"
version = "0.1.0"
description = "Vinted/OLX sales management webapp"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.21",
    "sqlalchemy==2.0.46",
    "alembic==1.18.3",
    "psycopg2-binary==2.9.11",
    "httpx==0.28.1",
    "apscheduler==3.11.2",
    "python-dotenv==1.2.1",
    "openai==2.15.0",
    "pillow==12.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "beautifulsoup4==4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.14",
    "pyrefly==0.50.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.pyrefly]
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
